# aw-glm

./: .gitmodules  LICENSE  README.md  aw-glm-bindings.asd  aw-glm.asd  claw-glm-bindings.asd  claw-glm.asd  readme.md
.github/workflows/: build.yaml
bindings/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp  x86_64-w64-mingw32.lisp
example/: example.lisp
glm/: ext.hpp
glm/gtx/: simd_mat4.hpp
src/: claw.lisp  claw_glm.hpp
src/lib/: .gitignore  CMakeLists.txt  adapter.aarch64-linux-android.cxx  adapter.c  adapter.cxx  adapter.x86_64-pc-linux-gnu.cxx  adapter.x86_64-pc-windows-gnu.cxx  adapter.x86_64-w64-mingw32.cxx  build.ps1  build.sh  claw_glm.hpp
test/gtx/: CMakeLists.txt
